Fix repl controls blocking scrollbar

--- a/shared/studio/tabs/repl/paramEditor/paramEditor.module.scss
+++ b/shared/studio/tabs/repl/paramEditor/paramEditor.module.scss
@@ -9,6 +9,7 @@
   min-height: 0;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   overflow: auto;
+  pointer-events: auto;
   @include customScrollbar;
 
   @include darkTheme {
